# BotDiscordUnifil

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  response.py
bot-env/: pyvenv.cfg
bot-env/Scripts/: activate  activate.bat
botdiscordunifil/: classroom_api.py  classroom_connection.py  main.py  redis_cache.py
docs/: as_is.md  der.md  plano_estagio.md  readme.md  relatório_final.md  rup_class.md  rup_gloss.md  rup_imp.md  rup_seq.md  rup_ssspec.md  rup_stkreq.md  rup_uc.md  rup_ucspec.md  to_be.md  visao.md
docs/seq/: readme.md  rup_seq.md  rup_seq_atualizar_cache.md  rup_seq_autenticar_api.md  rup_seq_calendario.md  rup_seq_materias.md  rup_seq_notificar.md  rup_seq_obter_aluno.md  rup_seq_realizar_comando.md  rup_seq_tarefas.md  rup_seq_utilizar_cache.md  rup_seq_verificar_pendencias.md
docs/uc_spec/: readme.md  rup_ucspec_atualizar_cache.md  rup_ucspec_autenticar_api.md  rup_ucspec_comando_calendario.md  rup_ucspec_comando_materias.md  rup_ucspec_comando_notificar.md  rup_ucspec_comando_tarefas.md  rup_ucspec_discernir_aluno.md  rup_ucspec_notificar.md  rup_ucspec_notificar_usuario.md  rup_ucspec_obter_aluno.md  rup_ucspec_realizar_comando.md  rup_ucspec_utilizar_cache.md  rup_ucspec_verificar_pendencias.md
